fix(footer): fix footer z-index with nav
Allow navigation to appear over the footer

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -60,7 +60,9 @@ img {
   -ms-user-select: none;
 }
 
-iframe, object, embed {
+iframe,
+object,
+embed {
   max-width: 100% !important;
 }
 
